@@ -11,6 +11,7 @@ Revision history for Perl extension DBIx::Skinny
    2010-04-20
         - FIXED: check get_column argument and check no select column case (walf443)
         - FIXED: typo fixed. s/coddnnect_options/connect_options/. (thanks yibe)
+        - FIXED: loose connect_options after new (thanks yibe)
 
 0.0708
    2010-04-07
